# Stm32N6-YOLO-SLAM-Autonomous-RC-Navigation-System-Pi-5

./: .gitmodules  README.md  STM32N6 Main  frames_2026-04-01_16.28.57.gv  frames_2026-04-01_16.33.40.gv  frames_2026-04-01_17.57.07.gv
install/: setup.sh
install/cspc_lidar/share/cspc_lidar/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/cspc_lidar_sdk_ros2/: CMakeLists.txt
src/cspc_lidar_sdk_ros2/params/: cspc_lidar.yaml
src/cspc_lidar_sdk_ros2/src/: node_lidar_ros.cpp
src/rc_car_obstacle_detection/: CHECKLIST.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  README.md  check_lidar.sh  setup.py  setup_pi.sh  transfer_to_pi.bat  transfer_to_pi.ps1
src/rc_car_obstacle_detection/config/: ekf_imu.yaml  nav2_params.yaml  rf2o.yaml
src/rc_car_obstacle_detection/imu_uart_node/: package.xml  setup.cfg  setup.py
src/rc_car_obstacle_detection/imu_uart_node/config/: ekf.yaml
src/rc_car_obstacle_detection/imu_uart_node/imu_uart_node/: imu_uart_node.py
src/rc_car_obstacle_detection/imu_uart_node/launch/: auto_drive.launch.py  ekf_launch.py
src/rc_car_obstacle_detection/launch/: cartographer_slam.launch.py  obstacle_detection.launch.py  rc_car_slam.launch.py  simple_start.launch.py  slam_only.launch.py  slam_test.launch.py  test_rf2o_minimal.launch.py
src/rc_car_obstacle_detection/rc_car_obstacle_detection/: __init__.py  lidar_processor.py
src/rc_car_obstacle_detection/scripts/: cmd_vel_to_stm32.py  manual_imu_bridge.py  scan_retimestamp_relay.py  yb_imu_bridge.py
(+23 files in other folders)
